--- a/package.json
+++ b/package.json
@@ -15,5 +15,22 @@
   "bugs": {
     "url": "https://github.com/chasewhitney/food-tracker/issues"
   },
-  "homepage": "https://github.com/chasewhitney/food-tracker#readme"
+  "homepage": "https://github.com/chasewhitney/food-tracker#readme",
+  "dependencies": {
+    "angular": "^1.6.9",
+    "angular-animate": "^1.6.9",
+    "angular-aria": "^1.6.9",
+    "angular-material": "^1.1.7",
+    "angular-messages": "^1.6.9",
+    "angular-route": "^1.6.9",
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.0.9",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "request": "^2.83.0"
+  }
 }
