--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular-route": "^1.6.9",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.1.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.9",
