--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "node": "8.10.0"
   },
   "scripts": {
+    "dev": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/server.js"
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
